@@ -18,6 +18,10 @@
 
 * KGySoft.Json namespace:
 =========================
++ JsonValue struct:
+  + New indexers with StringSegment and ReadOnlySpan<char> (.NET Core 2.1/.NET Standard 2.1 and above) parameter
++ JsonObject class:
+  + New indexers with StringSegment and ReadOnlySpan<char> (.NET Core 2.1/.NET Standard 2.1 and above) parameter
 * JsonValueExtensions class:
   + New TryGetInt128, AsInt128, GetInt128OrDefault methods (.NET 7.0 and above)
   + New TryGetUInt128, AsUInt128, GetUInt128OrDefault methods (.NET 7.0 and above)
